--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "socket.io": "^1.7.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy": "npx firebase deploy --token $FIREBASE_TOKEN"
   },
   "devDependencies": {}
 }
