--- a/package.json
+++ b/package.json
@@ -1,17 +1,45 @@
 {
-  "name": "socket-chat-example",
-  "version": "0.0.1",
-  "description": "my first socket.io app",
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "express": "^4.15.2",
-    "firebase": "^7.6.1",
-    "firebase-admin": "^8.8.0",
+    "@material-ui/core": "^4.8.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "firebase": "^7.6.0",
     "moment": "^2.24.0",
-    "socket.io": "^1.7.3"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "react-scroll": "^1.7.14",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "deploy": "npx firebase deploy --token $FIREBASE_TOKEN"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.0"
+  },
+  "proxy": "http://localhost:5000"
 }
