--- a/package.json
+++ b/package.json
@@ -19,28 +19,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build --release",
-    "deploy": "npx firebase deploy --token $FIREBASE_TOKEN",
+    "deploy": "npm firebase deploy --token $FIREBASE_TOKEN",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@material-ui/icons": "^4.5.1",
-    "axios": "^0.19.0"
   },
   "proxy": "http://localhost:5000"
 }
