--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build --release",
-    "deploy": "npm firebase deploy --token $FIREBASE_TOKEN",
+    "build": "react-scripts build",
+    "deploy": "npx @firebase deploy --token $FIREBASE_TOKEN",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
