--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "npx @firebase deploy --token $FIREBASE_TOKEN",
+    "deploy": "npx firebase deploy --token $FIREBASE_TOKEN",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
