--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "8"
+  }
+
 }
