--- a/functions/package.json
+++ b/functions/package.json
@@ -12,5 +12,8 @@
   "scripts": {
     "start": "node index.js"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "engines": {
+    "node": "8"
+  }
 }
