--- a/package.json
+++ b/package.json
@@ -25,9 +25,5 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
-  "engines": {
-    "node": "8"
-  }
-
+  "proxy": "http://localhost:5000"
 }
