--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ cache:
   directories:
     - node_modules
 script:
+  - cd client
   - npm run build
+  - cd ..
   - npm run deploy
 after_success:
   - npm run start
