--- a/package.json
+++ b/package.json
@@ -1,29 +1,14 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
+  "name": "ChatBE",
   "dependencies": {
-    "@material-ui/core": "^4.8.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "firebase": "^7.6.0",
+    "express": "^4.15.2",
+    "firebase": "^7.6.1",
     "firebase-admin": "^8.8.0",
-    "firebase-tools": "^7.9.0",
     "moment": "^2.24.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "react-scroll": "^1.7.14",
-    "socket.io-client": "^2.3.0"
+    "socket.io": "^1.7.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "npx firebase deploy --token $FIREBASE_TOKEN",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node index.js"
   },
-  "proxy": "http://localhost:5000"
+  "devDependencies": {}
 }
