--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,8 @@
 language: node_js
 node_js:
   - "stable"
-cache:
-  directories:
-    - node_modules
-before_install:
-  - cd client
 install:
-  npm run build
-before_script:
-  - cd ..
+  - npm run build ./client
 script:
   - npm run deploy
 after_success:
