--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - "stable"
 script:
+  - npm install --prefix ./client
   - npm run --prefix ./client build
   - npm run deploy
 after_success:
