--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.15.2",
     "firebase": "^7.6.1",
     "firebase-admin": "^8.8.0",
+    "firebase-tools": "^7.11.0",
     "moment": "^2.24.0",
     "socket.io": "^1.7.3"
   },
